# model_predictive_control

./: continuous_cartpole.py  main.py  model_predictive_control.py  pyproject.toml  rendering.py
