[project]
name = "model-predictive-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpy>=1.7.1",
    "gymnasium[classic-control]>=1.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pyglet==1.5.27",
]
